[gd_scene load_steps=4 format=3 uid="uid://cnyua5su0laqs"]

[ext_resource type="Script" uid="uid://cayb4i5i450b0" path="res://main_menu.gd" id="1_l6cm7"]
[ext_resource type="AudioStream" uid="uid://f86q66styjfp" path="res://audio/Button.wav" id="2_ekxnf"]
[ext_resource type="AudioStream" uid="uid://crmf1crv8hwuu" path="res://audio/CorridorOfSorrow.mp3" id="3_bqqt6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -110.5
offset_right = 107.5
offset_bottom = 110.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "START"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "SETTINGS"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "EXIT"

[node name="Audio" type="Node2D" parent="."]

[node name="ButtonSFX" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("2_ekxnf")

[node name="BGM" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("3_bqqt6")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
